unpackaged/main/default/objects/OrderApi__Payment_Terms__c/OrderApi__Payment_Terms__c.object-meta.xml
<CustomObject>
    <description>Custom Payment Terms for Invoices.</description>
    <label>Payment Terms</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>