unpackaged/main/default/objects/OrderApi__Payment_Terms__c/fields/OrderApi__Business_Group__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Business_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**Required** Link to the related Business Group.</description>
    <inlineHelpText>**Required** Link to the related Business Group.</inlineHelpText>
    <label>Business Group</label>
    <referenceTo>OrderApi__Business_Group__c</referenceTo>
    <relationshipLabel>Payment Terms Options</relationshipLabel>
    <relationshipName>Payment_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>