unpackaged/main/default/objects/OrderApi__Payment_Terms__c/fields/OrderApi__Display_Message__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Display_Message__c</fullName>
    <description>The displayed message to the customer for the Payment Terms.</description>
    <inlineHelpText>The displayed message to the customer for the Payment Terms.</inlineHelpText>
    <label>Display Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>