unpackaged/main/default/objects/OrderApi__Payment_Terms__c/fields/OrderApi__Display_Name__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Display_Name__c</fullName>
    <description>The displayed name (to the customer) for the Payment Terms. Defaults to the name value of the record.</description>
    <inlineHelpText>The displayed name (to the customer) for the Payment Terms. Defaults to the name value of the record.</inlineHelpText>
    <label>Display Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>