unpackaged/main/default/objects/OrderApi__Payment_Terms__c/fields/OrderApi__Variable__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Variable__c</fullName>
    <description>**Required** The number of days to add to the Invoice Date to use to calculate due date.</description>
    <inlineHelpText>**Required** The number of days to add to the Invoice Date to use to calculate due date.</inlineHelpText>
    <label>Variable</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>